--- a/about.html
+++ b/about.html
@@ -1,164 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <!-- Main -->
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
+  <head>
+    <!-- Main -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
 
-  <title>Travels Go Lanka | Get Your Best Travelling Tour | About Us</title>
+    <title>Travels Go Lanka | Get Your Best Travelling Tour | About Us</title>
 
-  <!-- Structured Data (JSON-LD) - For SEO -->
-  <script type="application/ld+json">
-    {
-        "@context" : "https://schema.org",
-        "@type" : "WebSite",
-        "name" : "Travels Go Lanka",
-        "alternateName" : "MSA",
-        "url" : "https://www.travelsgolanka.com/",
-        "potentialAction": {
-            "@type": "SearchAction",
-            "target": {
-            "@type": "EntryPoint",
-            "urlTemplate": "https://www.travelsgolanka.com/search?q={search_term_string}"
-            },
-            "query-input": "required name=search_term_string"
-        }
-    }
-  </script>
-  <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "LocalBusiness",
-        "name": "Travels Go Lanka",
-        "image": "https://www.travelsgolanka.com/assets/img/favicon.png",
-        "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "120/1/D Wateraka, padukka, srilanka.",
-            "addressLocality": "Wateraka",
-            "addressRegion": "Western Province",
-            "postalCode": "10511",
-            "addressCountry": "Sri Lanka"
-        },
-        "url": "https://www.travelsgolanka.com/",
-        "telephone": "+94743773190"
-    }
-  </script>    
-  <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "WebPage",
-        "name": "Things To Do in SriLanka",
-        "url": "https://www.travelsgolanka.com/ThingsToDoinSriLanka.html"
-    }
-  </script>
-  <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "WebPage",
-        "name": "About",
-        "url": "https://www.travelsgolanka.com/about.html"
-    }
-  </script>
-  <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "WebPage",
-        "name": "Contact",
-        "url": "https://www.travelsgolanka.com/contact.html"
-    }
-  </script>
+    <!-- Structured Data (JSON-LD) - For SEO -->
+    <script type="application/ld+json">
+      {
+          "@context" : "https://schema.org",
+          "@type" : "WebSite",
+          "name" : "Travels Go Lanka",
+          "alternateName" : "MSA",
+          "url" : "https://www.travelsgolanka.com/",
+          "potentialAction": {
+              "@type": "SearchAction",
+              "target": {
+              "@type": "EntryPoint",
+              "urlTemplate": "https://www.travelsgolanka.com/search?q={search_term_string}"
+              },
+              "query-input": "required name=search_term_string"
+          }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+          "@context": "https://schema.org",
+          "@type": "LocalBusiness",
+          "name": "Travels Go Lanka",
+          "image": "https://www.travelsgolanka.com/assets/img/favicon.png",
+          "address": {
+              "@type": "PostalAddress",
+              "streetAddress": "120/1/D Wateraka, padukka, srilanka.",
+              "addressLocality": "Wateraka",
+              "addressRegion": "Western Province",
+              "postalCode": "10511",
+              "addressCountry": "Sri Lanka"
+          },
+          "url": "https://www.travelsgolanka.com/",
+          "telephone": "+94743773190"
+      }
+    </script>    
+    <script type="application/ld+json">
+      {
+          "@context": "https://schema.org",
+          "@type": "WebPage",
+          "name": "Things To Do in SriLanka",
+          "url": "https://www.travelsgolanka.com/ThingsToDoinSriLanka.html"
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+          "@context": "https://schema.org",
+          "@type": "WebPage",
+          "name": "About",
+          "url": "https://www.travelsgolanka.com/about.html"
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+          "@context": "https://schema.org",
+          "@type": "WebPage",
+          "name": "Contact",
+          "url": "https://www.travelsgolanka.com/contact.html"
+      }
+    </script>
 
-   <!-- Sub Main -->
-  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-  <meta name="googlebot" content="index, follow">
-  <meta name="bingbot" content="index, follow">
-  <meta name="slurp" content="index, follow">
-  <meta name="referrer" content="no-referrer">
-  <meta name="description"
-      content="Travels Go Lanka offers customized Sri Lanka tour packages, cultural tours, wildlife safaris, beach adventures, and hill country explorations for travelers seeking unforgettable experiences.">
-  <meta name="keywords"
-      content="Sri Lanka tours, travel Sri Lanka, Sri Lanka tour packages, cultural tours Sri Lanka, wildlife safaris, beach holidays Sri Lanka, hill country tours, adventure travel Sri Lanka, private tours Sri Lanka, best Sri Lanka travel agency">
-  <meta name="author" content="Travels Go Lanka">
-  <meta name="copyright" content="© 2024 Travels Go Lanka">
-  <link rel="canonical" href="https://www.travelsgolanka.com/">
+    <!-- Sub Main -->
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
+    <meta name="bingbot" content="index, follow">
+    <meta name="slurp" content="index, follow">
+    <meta name="referrer" content="no-referrer">
+    <meta name="description"
+        content="Travels Go Lanka offers customized Sri Lanka tour packages, cultural tours, wildlife safaris, beach adventures, and hill country explorations for travelers seeking unforgettable experiences.">
+    <meta name="keywords"
+        content="Sri Lanka tours, travel Sri Lanka, Sri Lanka tour packages, cultural tours Sri Lanka, wildlife safaris, beach holidays Sri Lanka, hill country tours, adventure travel Sri Lanka, private tours Sri Lanka, best Sri Lanka travel agency">
+    <meta name="author" content="Travels Go Lanka">
+    <meta name="copyright" content="© 2024 Travels Go Lanka">
+    <link rel="canonical" href="https://www.travelsgolanka.com/">
 
-  <!-- sitemap.xml -->
-  <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.travelsgolanka.com/sitemap.xml">
+    <!-- sitemap.xml -->
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.travelsgolanka.com/sitemap.xml">
 
-  <!-- Preload -->
-  <link rel="preload" href="https://unpkg.com/swiper/swiper-bundle.min.css" as="style">
+    <!-- Preload -->
+    <link rel="preload" href="https://unpkg.com/swiper/swiper-bundle.min.css" as="style">
 
-  <!-- Mobile Optimization Tags -->
-  <meta name="theme-color" content="#000000">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Travels Go Lanka">
-  <meta name="application-name" content="Travels Go Lanka">
+    <!-- Mobile Optimization Tags -->
+    <meta name="theme-color" content="#000000">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Travels Go Lanka">
+    <meta name="application-name" content="Travels Go Lanka">
 
-  <!-- Dublin Core Meta Tags -->
-  <meta name="DC.title" content="Travels Go Lanka">
-  <meta name="DC.creator" content="Travels Go Lanka">
-  <meta name="DC.subject" content="Sri Lanka tours, travel Sri Lanka, Sri Lanka tour packages, cultural tours Sri Lanka, wildlife safaris, beach holidays Sri Lanka, hill country tours, adventure travel Sri Lanka, private tours Sri Lanka, best Sri Lanka travel agency">
-  <meta name="DC.description"
-      content="Travels Go Lanka offers customized Sri Lanka tour packages, cultural tours, wildlife safaris, beach adventures, and hill country explorations for travelers seeking unforgettable experiences.">
-  <meta name="DC.publisher" content="Travels Go Lanka">
-  <meta name="DC.contributor" content="Web Mind Innovation">
-  <meta name="DC.date" content="2025-03-23">
-  <meta name="DC.type" content="Text">
-  <meta name="DC.format" content="text/html">
-  <meta name="DC.identifier" content="https://www.travelsgolanka.com/">
-  <meta name="DC.language" content="en">
-  <meta name="DC.coverage" content="World">
-  <meta name="DC.rights" content="© 2024 Travels Go Lanka. All rights reserved.">
+    <!-- Dublin Core Meta Tags -->
+    <meta name="DC.title" content="Travels Go Lanka">
+    <meta name="DC.creator" content="Travels Go Lanka">
+    <meta name="DC.subject" content="Sri Lanka tours, travel Sri Lanka, Sri Lanka tour packages, cultural tours Sri Lanka, wildlife safaris, beach holidays Sri Lanka, hill country tours, adventure travel Sri Lanka, private tours Sri Lanka, best Sri Lanka travel agency">
+    <meta name="DC.description"
+        content="Travels Go Lanka offers customized Sri Lanka tour packages, cultural tours, wildlife safaris, beach adventures, and hill country explorations for travelers seeking unforgettable experiences.">
+    <meta name="DC.publisher" content="Travels Go Lanka">
+    <meta name="DC.contributor" content="Web Mind Innovation">
+    <meta name="DC.date" content="2025-03-23">
+    <meta name="DC.type" content="Text">
+    <meta name="DC.format" content="text/html">
+    <meta name="DC.identifier" content="https://www.travelsgolanka.com/">
+    <meta name="DC.language" content="en">
+    <meta name="DC.coverage" content="World">
+    <meta name="DC.rights" content="© 2024 Travels Go Lanka. All rights reserved.">
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:locale" content="en_US">
-  <meta property="og:locale:alternate" content="en_GB">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Travels Go Lanka">
-  <meta property="og:description"
-      content="Travels Go Lanka offers customized Sri Lanka tour packages, cultural tours, wildlife safaris, beach adventures, and hill country explorations for travelers seeking unforgettable experiences.">
-  <meta property="og:image" content="https://www.travelsgolanka.com/assets/img/favicon.png">
-  <meta property="og:url" content="https://www.travelsgolanka.com/index.html">
-  <meta property="og:site_name" content="Travels Go Lanka">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:locale" content="en_US">
+    <meta property="og:locale:alternate" content="en_GB">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Travels Go Lanka">
+    <meta property="og:description"
+        content="Travels Go Lanka offers customized Sri Lanka tour packages, cultural tours, wildlife safaris, beach adventures, and hill country explorations for travelers seeking unforgettable experiences.">
+    <meta property="og:image" content="https://www.travelsgolanka.com/assets/img/favicon.png">
+    <meta property="og:url" content="https://www.travelsgolanka.com/index.html">
+    <meta property="og:site_name" content="Travels Go Lanka">
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Travels Go Lanka">
-  <meta name="twitter:description"
-      content="Travels Go Lanka offers customized Sri Lanka tour packages, cultural tours, wildlife safaris, beach adventures, and hill country explorations for travelers seeking unforgettable experiences.">
-  <meta name="twitter:image" content="https://www.travelsgolanka.com/assets/img/favicon.png">
-  <meta name="twitter:site" content="@travelsgolanka">
-  <meta name="twitter:creator" content="@travelsgolanka">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Travels Go Lanka">
+    <meta name="twitter:description"
+        content="Travels Go Lanka offers customized Sri Lanka tour packages, cultural tours, wildlife safaris, beach adventures, and hill country explorations for travelers seeking unforgettable experiences.">
+    <meta name="twitter:image" content="https://www.travelsgolanka.com/assets/img/favicon.png">
+    <meta name="twitter:site" content="@travelsgolanka">
+    <meta name="twitter:creator" content="@travelsgolanka">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Marcellus:wght@400&display=swap" rel="stylesheet">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Marcellus:wght@400&display=swap" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
-  <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+    <!-- Main CSS File -->
+    <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- AOS JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <!-- AOS JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 
-  <!-- AOS CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
+    <!-- AOS CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
 
-</head>
+  </head>
 
   <body class="about-page">
 
@@ -264,7 +264,7 @@
       </section>
 
       <!-- Team Section -->
-      <section class="team-15 team section" id="team" style="border-top: 1px solid rgba(0, 128, 0, 0.6);">
+      <section class="team-15 team section" id="team">
         <!-- Section Title -->
         <div class="container section-title" data-aos="fade-up">
           <h2><b>Team</b></h2>
