--- a/contact.html
+++ b/contact.html
@@ -208,7 +208,7 @@
         <div class="container mb-5" data-aos="fade">
           <div class="col-lg-12">
             <iframe style="width: 100%; height: 400px; border:0;" 
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15845.309673694637!2d80.02268119430467!3d6.851299389894074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae25248424ef777%3A0x8f7ca8306642ce77!2sGodagama!5e0!3m2!1sen!2slk!4v1742230748963!5m2!1sen!2slk"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.3867561992993!2d80.06640057480887!3d6.844152593154009!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2530048961ef3%3A0xd6cd052aad5f8b4c!2sTravels%20Go%20Lanka!5e0!3m2!1sen!2slk!4v1743011570257!5m2!1sen!2slk"
               frameborder="0" allowfullscreen=""  loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
           </div>
